--- a/sass/business/_dashboard-home.scss
+++ b/sass/business/_dashboard-home.scss
@@ -7,12 +7,7 @@
     margin: 0 auto;
   }
 }
-.middle_column{
-  @media (min-width: 1200px) {
-    padding-left: 40px;
-    padding-right: 28px;
-  }
-}
+
 
 .alt_bdb_header {
   height: 72px;
@@ -24,6 +19,14 @@
       .col-lg-2{
         &.left-column{
           width: 260px !important;
+        }
+      }
+      .col-lg-7{
+        &.middle_column{
+          width:710px !important;
+          .wellcome_message{
+            margin-left: -36px;
+          }
         }
       }
       .col-lg-3{
@@ -113,7 +116,9 @@
       }
       .col-lg-7{
         &.middle_column{
-          width:57.55555% !important;
+          width:710px !important;
+          padding-left: 0;
+          padding-right: 0;
         }
       } 
       .col-lg-10{
@@ -123,7 +128,10 @@
       }
       .col-lg-3{
         &.right-column{
-          width: 342px !important;
+          padding-left: 0;
+          aside{
+            width: 342px !important;
+          }
         }
       }
     }
