--- a/sass/freelancer/_dashboard-home.scss
+++ b/sass/freelancer/_dashboard-home.scss
@@ -310,7 +310,7 @@
     height: 388px;
   }
   &.promo_bg {
-    background-image: url("../../assets/images/business-dashboard/alt_bdb_promo-bg.svg");
+    background-image: url("../../assets/images/business-dashboard/alt_bdb_promo-bg.png");
     background-position: bottom right;
     background-size: 39%;
     background-repeat: no-repeat;
