dashboar update with pixel

--- a/sass/_sign-up.scss
+++ b/sass/_sign-up.scss
@@ -63,7 +63,7 @@
 }
 .input-field {
   background-color: #ffffff;
-  color: var(--alt-gray-light);
+  color: var(--alt-text-clr);
   width: 100%;
   padding: 1rem;
   border-radius: 0.375rem;
