--- a/sass/business/_my-project.scss
+++ b/sass/business/_my-project.scss
@@ -19,6 +19,19 @@
 }
 
 
+    @media (min-width: 1440px) {
+        
+            #project-page{
+                .col-lg-7{
+                    &.middle_column{
+                        width:865px !important;
+                    }
+                }
+            }
+                
+    }
+
+
 
 
 
