--- a/sass/_tabs-content.scss
+++ b/sass/_tabs-content.scss
@@ -12,9 +12,18 @@
         border: none;
         padding-bottom: 10px;
         @media (min-width: 320px) {
-          font-size: 12px;
+          font-size: 7px;
         }
         @media (min-width: 768px) {
+          font-size: 12px;
+        }
+        @media (min-width: 992px) {
+          font-size: 9px;
+        }
+        @media (min-width: 1200px) {
+          font-size: 12px;
+        }
+        @media (min-width: 1366px) {
           font-size: 14px;
         }
         &.active {
